refactor(omnistack): replace HttpClient with HttpURLConnection in ClaroXmlAdapter
- Remove `HttpClient` implementation for SOAP requests and implement `HttpURLConnection`.
- Simplify request handling, add support for streaming and error handling, and improve compatibility.